tests/paczka1/small_fuzzy/31929750.err
Error in line 1: 8P39KzWMXLa S693 38,6
Error in line 5: yH7vxqL0B1 S693 54,6
Error in line 7: yH7vxqL0B1 S122 78,5
Error in line 4: S243 S693 6,9
Error in line 8: yH7vxqL0B1 S243 23,5
Error in line 11: CVKkFYjocGU S122 87,5
Error in line 10: SDmElPvAY3I S122 1,7
